# ecomp

./: .buildinfo  .gitignore  .pre-commit-config.yaml  ECOMP_CODEBASE_PLAN.md  Makefile  README.md  README_ECOMP_FORMAT.md  ascomycota_bench30.txt  bee_bird_sample30.txt  codecov.yml  evolutionary_msa_compression.md  genindex.html  index.html  integration.coverage.xml  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  unit.coverage.xml
.doctrees/: environment.pickle  index.doctree
_sources/: index.rst.txt
about/: index.html
change_log/: index.html
docs/: DOCS.md  Makefile  Pipfile  README.md  architecture.rst  bee_bird_ordering_strategies.json  benchmarks.rst  cli.rst  conf.py  development.rst  index.rst  overview.rst  synthetic_ordering_strategies.json
ecomp/: __init__.py  _compat.py  _version.py  cli.py  io.py
example_data/: 12_YAL002W_Anc_4.129_aa_aln.fasta  12_YAL002W_Anc_4.129_aa_aln.fasta.ecomp  12_YAL002W_Anc_4.129_aa_aln.fasta.json  12_YAL008W_Anc_7.107_aa_aln.fasta  12_YAL008W_Anc_7.107_aa_aln.fasta.ecomp  12_YAL008W_Anc_7.107_aa_aln.fasta.json  12_YAL009W_Anc_7.104_aa_aln.fasta  12_YAL009W_Anc_7.104_aa_aln.fasta.ecomp  12_YAL009W_Anc_7.104_aa_aln.fasta.json  12_YAL010C_Anc_7.103_aa_aln.fasta  12_YAL010C_Anc_7.103_aa_aln.fasta.ecomp  12_YAL010C_Anc_7.103_aa_aln.fasta.json  12_YAL011W_Anc_7.102_aa_aln.fasta  12_YAL011W_Anc_7.102_aa_aln.fasta.ecomp  12_YAL011W_Anc_7.102_aa_aln.fasta.json  (+24 more)
legacy/evolutionary_compression_stub/: README.md  pyproject.toml
legacy/evolutionary_compression_stub/evolutionary_compression/: __init__.py
(+85 files in other folders)
